devscripts (2.11.8) UNRELEASED; urgency=low

  [ David Prévot ]
  * French translation update.

  [ James McCoy ]
  * dd-list:
    + Recognize -h argument, as documented.
  * Also note DEBCHANGE_MAINTTRAILER change in NEWS entry for 2.11.7.
    (Closes: #672973)

 -- David Prévot <taffit@debian.org>  Sun, 06 May 2012 23:26:05 -0400

devscripts (2.11.7) unstable; urgency=low

  [ James McCoy ]
  * bts:
    + Generate a proper Cc field with "reassign … . done …".  (Closes:
      #668132)
    + Document -m as an alias for show's --mbox.  (Closes: #670107)
  * debchange:
    + Remove EOLed releases Lenny and Maverick.
    + Change DEBCHANGE_RELEASE_HEURISTIC default to "changelog".
    + Correctly handle NMU detection when there is no whitespace after a comma
      in Uploaders.  (Closes: #642342)
  * mergechanges: Handle continuation lines correctly.  Thanks to Ben
    Hutchings for the patch.  (Closes: #656415)
  * debcheckout: Allow specifying a branch for Vcs-Git fields.  Thanks to
    Bernhard R. Link for the patch.  (Closes: #655085, #600745)
  * d/control: Change Maintainer address to devscripts-devel@lists.alioth.d.o
  * wnpp-alert: Use dpkg-query instead of directly parsing dpkg's status file.
    (Closes: #669579)
  * dpkg-depcheck: Match the new error message from “dpkg -S”.  Thanks to Bao
    Haojun for the patch.  (Closes: #667581)
  * list-unreleased: Update excluded directories to include other common
    VCSes.
  * svnpath: Always run “svn info” instead of checking for .svn. (Closes:
    #645106)
  * mk-build-deps:
    + Make error messages more explicit about what went wrong.  (Closes:
      #596561)
    + Use Dpkg::IPC to run apt-cache.
    + Don't run equivs if no package information was parsed.
  * uscan: Clarify behavior of the --destdir option.  (Closes: #659389)
  * debi: Add -u and -m as synonyms for --upgrade and --multi.  (Closes:
    #662773)

  [ Benjamin Drung ]
  * Introduce a test suite for the scripts based on shunit2.
