@@ -6,6 +6,8 @@ devscripts (2.11.8) UNRELEASED; urgency=low
   [ James McCoy ]
   * dd-list:
     + Recognize -h argument, as documented.
+    + Don't error when given multiple binary packages from the same source.
+      (Closes: #672309)
   * Also note DEBCHANGE_MAINTTRAILER change in NEWS entry for 2.11.7.
     (Closes: #672973)
 
